@@ -2,7 +2,7 @@
 #
 # Home page: http://smartmontools.sourceforge.net
 #
-# $Id: Makefile,v 1.20 2002/10/22 08:43:22 ballen4705 Exp $
+# $Id: Makefile,v 1.21 2002/10/24 07:50:45 ballen4705 Exp $
 #
 # Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 # 
@@ -99,5 +99,5 @@ release: $(releasefiles)
 	mv /usr/src/redhat/SRPMS/$(pkgname)*rpm .
 	rm -f /usr/src/redhat/SOURCES/$(pkgname).tar.gz
 	. cvs-script && cvs commit -m "release $(counter)"
-	. cvs-script && cvs tag "RELEASE_5_0_$(counter)"
+	. cvs-script && cvs tag -d "RELEASE_5_0_$(counter)" && cvs tag "RELEASE_5_0_$(counter)"
 	echo `hostname` | grep -q ballen && echo $(newcounter) > VERSION
